<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Riilo</string>
   
    <string name="endpoint_posts_upload">http://riilo-prod.elasticbeanstalk.com/posts/upload/</string>
    <string name="endpoint_latest_posts">http://d19vwjdwjmit8v.cloudfront.net/posts/latest/</string>
    <string name="endpoint_conversation">http://d19vwjdwjmit8v.cloudfront.net/posts/conversation/</string>
    <string name="endpoint_notifications">http://riilo-prod.elasticbeanstalk.com/posts/new/</string>
    <string name="endpoint_silence_notifications">http://riilo-prod.elasticbeanstalk.com/posts/silence/</string>
    <string name="endpoint_nearby_posts">http://riilo-prod.elasticbeanstalk.com/posts/nearby/</string>
    <string name="endpoint_post_location">http://riilo-prod.elasticbeanstalk.com/location/insert/</string>
    <string name="endpoint_location_history">http://d19vwjdwjmit8v.cloudfront.net/location/history/</string>
    <string name="endpoint_posts_on_map">http://d19vwjdwjmit8v.cloudfront.net/posts/onmap/</string>
    <string name="endpoint_device_insert">http://riilo-prod.elasticbeanstalk.com/device/insert/</string>
    
    <string name="local_test_posts_upload">http://192.168.0.197:8080/web/posts/upload/</string>
    <string name="local_test_latest_posts">http://192.168.0.197:8080/web/posts/latest/</string>
    <string name="local_test_conversation">http://192.168.0.197:8080/web/posts/conversation/</string>
    <string name="local_test_notifications">http://192.168.0.197:8080/web/posts/new/</string>
    <string name="local_test_silence_notifications">http://192.168.0.197:8080/web/posts/silence/</string>
    <string name="local_test_nearby_posts">http://192.168.0.197:8080/web/posts/nearby/</string>
    <string name="local_test_post_location">http://192.168.0.197:8080/web/location/insert/</string>
    <string name="local_test_location_history">http://192.168.0.197:8080/web/location/history/</string>
    <string name="local_test_posts_on_map">http://192.168.0.197:8080/web/posts/onmap/</string>
    <string name="local_test_device_insert">http://192.168.0.197:8080/web/device/insert/</string>
    
    <string name="content_description_tutorial_image">Tutorial Illustration</string>
    <string name="content_description_user_at_location">User at location</string>
    <string name="content_description_cancel_action">Cancel action</string>
    <string name="content_description_submit">Submit</string>
    <string name="content_description_map_marker">Map Marker</string>
    
    <string name="post_adapter_you">You</string>
    <string name="post_adapter_somebody">Somebody</string>
    
   	<string name="post_adapter_posted_1st">posted:</string>
	<string name="post_adapter_replied_1st">replied:</string>
	
	<string name="post_adapter_posted_3rd">posted:</string>
	<string name="post_adapter_replied_3rd">replied:</string>
    
    <string name="post_adapter_posted_on">posted on</string>
    <string name="post_adapter_waiting_for_location">waiting for location,</string>
    <string name="post_adapter_away">away,</string>
    
    <string name="warning_dialog_heading">Warning</string>
    <string name="info_dialog_heading">The more you know&#8230;</string>
    
    <string name="post_view_activity_label">Conversation</string>
    <string name="tutorial_activity_label">The more you know</string>
    <string name="button_refresh_label">Refresh</string>
    
    <string name="notification_title">Stuff is happening</string>
    
    <string name="error_cannot_connect_to_location_services">Unable to connect to GooglePlay services. Please update GooglePlay services. The app will now terminate.</string>
    <string name="error_connection_no_attempt">There are dragons, many dragons blocking our server, it cannot be reached.</string>
    <string name="error_upload_post">On its way to the server your post was kidnapped by some dragons. Please try again.</string>
    <string name="error_post_empty">The dwarves working on the server don\'t fancy empty posts, please write something so they don\'t go on strike.</string>
    <string name="error_no_google_maps">Ouch, something went terribly wrong. Please keep calm and try again; if you still get this error your phone might not support Google Maps, and this app relies heavily on Google Maps.</string>
    <string name="error_more_zoom">Please press one of the red dots, or zoom in to see posts on the map.</string>
    <string name="error_no_posts">There are no posts in this area of the world. You can post one yourself, you know&#8230;</string>
    
    <string name="user_at_location_dialog_message">The user who posted this message was nearby the location shown on the map.</string>
    <string name="say_anything_anywhere_hint">Say anything, anywhere&#8230;</string>
    <string name="say_anything_hint">Say anything&#8230;</string>
    
    <string name="tutorial_ok">OK</string>
    <string name="tutorial_location_history">The red dot shows that somebody is/was in that area. Tap on the marker to leave them a message, and people in area will see you post.</string>
    <string name="tutorial_swipe_text">You can just swipe to easily navigate between app sections.</string>
    <string name="tutorial_click_post_to_see_location">Once the posts are loaded, you can tap a post in the list, to see its location on the map.</string>
    <string name="tutorial_conversation">This is a CONVERSATION. Here you can see the location of the post, and all messages and replies to that post.</string>
    <string name="tutorial_explore">This is EXPLORE. By dragging the map, you can navigate to any place you wish, and messages will show up on the map. For instance, you can navigate to New York, to see what people are talking about in New York.</string>
    <string name="tutorial_first_post_congrats">Congratulations! You have posted your first message on Riilo. People at that location will see your post and they might reply.</string>
    <string name="tutorial_how_to_write_a_post">Just tap the anywhere on the map, and write your post. It\'s as simple as that.</string>
    <string name="tutorial_latest">Here you will see the LATEST posts from all over the world. Fell free to explore in real time what others are saying.</string>
    <string name="tutorial_navigate_to_write_post">Let\'s get started: to write a post press the button in the top right corner. Don\'t think about it, just do it!</string>
    <string name="tutorial_nearby">This will show you the posts NEARBY your current location. All posts within 20 km or about 12.5 miles will be shown here.</string>
    <string name="tutorial_notifications">Once somebody replies to one of your posts, you will see that reply here; in the NOTIFICATIONS page.</string>
    <string name="tutorial_welcome">Hello, I am Riilo. With me, you can post any message to any location in the world. People from that location will see your message. Let me show you how it works!</string>
    
    <string name="section_post">Post Something</string>
    <string name="section_latest">Latest</string>
    <string name="section_nearby">Nearby</string>
    <string name="section_notifications">Notifications</string>
    
    <!-- <string name="error_sd_card_not_mounted">SD card not found</string> -->
    <!-- <string name="error_could_not_take_photo">Something went wrong (could not take photo)</string> -->
    <!-- <string name="user_at_location_activity_label">Leave a note, here</string> -->
    <!-- <string name="photos_folder_name">riilo</string> -->
    <!-- <string name="photo_name_base">riilo</string> -->
    
    <!-- <string name="to_location_post_activity_label">Post something, anywhere&#8230;</string> -->
    <!-- <string name="feed_activity_label">Feed</string> -->
    <!-- <string name="nearby_activity_label">Nearby Posts</string> -->
    <!-- <string name="connection_error_last_attempt">Elephants are blocking the connection, retrying...</string> -->
</resources>