<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tutorial_location_history_dialog"
   	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_centerVertical="true"
	android:background="@drawable/card_background"
	android:layout_margin="16dp"
	android:visibility="visible">
	    
	    <ImageView
	       	android:id="@+id/map_marker"
	       	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/location_history"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description_map_marker" />
	       
   	    <TextView 
   	        android:id="@+id/text_view_above"
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:padding="16dp"
   	        android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tutorial_location_history"
            android:contentDescription="@string/content_description_cancel_action" />
   	    
   	    <View 
   	        android:layout_height="1dp"
		    android:layout_width="fill_parent"
		    android:layout_above="@+id/button_close_tutorial_dialog"
		    android:background="@color/lightGrey"/>
   	    
   		<Button
		    android:id="@+id/button_close_tutorial_dialog"
		    android:layout_width="fill_parent"
		    android:layout_below="@+id/text_view_above"
		    android:layout_height="wrap_content"
		    android:background="@drawable/selector"
		    android:contentDescription="@string/content_description_cancel_action"
		    android:text="@string/tutorial_ok" />
	    
</RelativeLayout>